--- a/assets/main.css
+++ b/assets/main.css
@@ -16,9 +16,43 @@
 .hero > p:first-child {
 	font-size: 1.8em;
 	color: var(--primary);
+	opacity: 0;
+	transform: translateY(-100%);
+	animation: slideIn 1.5s ease forwards;
 }
 
-.hero > p:last-child {
+.hero > p:nth-child(2) {
 	color: var(--lightest);
-	font-size: 0.9em;
+	font-size: 1.5em;
+	opacity: 0;
+	transform: translateY(100%);
+	animation: slideIn 2.5s ease forwards;
+	font-family: "Montserrat", sans-serif;
+}
+
+.hero > a {
+	margin-top: 15px;
+}
+
+.heroBtn {
+	padding: 0.7em;
+	background-color: var(--primary);
+	border: none;
+	border-radius: 5px;
+	color: var(--secondary) !important;
+	font-size: 0.8em !important;
+	opacity: 0;
+	transform: translateY(100%);
+	animation: slideIn 2.5s ease forwards;
+}
+
+.heroBtn:hover {
+	opacity: 0.7 !important;
+}
+
+@keyframes slideIn {
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
