--- a/assets/shared.css
+++ b/assets/shared.css
@@ -104,6 +104,8 @@ main {
 	background-repeat: no-repeat;
 	flex-grow: 1;
 	filter: contrast(1.1);
+	display: flex;
+	flex-direction: column;
 }
 
 footer {
