--- a/assets/turniri.css
+++ b/assets/turniri.css
@@ -4,86 +4,83 @@
 	--lightest: #f8f8ff; /* text/highlights */
 }
 
-main {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	gap: 30px;
-	flex-wrap: wrap;
-}
-.card {
-	color: var(--lightest);
-	background-color: #39016171;
-	padding: 30px;
-	border: none;
-	border-radius: 10px;
-	filter: drop-shadow(2px 2px rgb(0, 0, 0));
+.title {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
-}
-
-.versus {
-	display: flex;
-	align-items: center;
 	justify-content: center;
-}
-.team {
-	text-align: center;
-	margin: 0 15px;
-	position: relative;
-}
-.versus > div > img {
-	width: 8em;
-	height: 6em;
-}
-
-.info > div {
-	display: flex;
-	justify-content: space-between;
 	align-items: center;
 	gap: 10px;
-	font-size: 0.6rem;
+	margin: 20px 0;
+	color: var(--lightest);
+	filter: drop-shadow(3px 3px 2px black);
 }
 
-.info > p {
-	font-size: 0.6rem;
-	padding-top: 10px;
+.title > h3 {
+	font-family: "Montserrat", sans-serif;
 }
 
-.info > p {
+#game {
+	font-family: "Montserrat", sans-serif;
+	background-color: var(--secondary);
+	color: var(--lightest);
+	padding: 0.4em 0.5em;
+	border-radius: 3px;
+	font-size: 0.5rem;
+}
+
+#game > option {
+	font-family: "Montserrat", sans-serif;
+}
+
+.grid {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	text-align: center;
+	height: 100%;
+}
+
+.round {
 	display: flex;
+	flex-direction: column;
+}
+
+.round > p {
+	color: var(--lightest);
+	filter: drop-shadow(3px 3px 2px black);
+	font-family: "Montserrat", sans-serif;
+	font-size: 1.2em;
+}
+
+.bracket {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
 	align-items: center;
-	gap: 5px;
+	flex-grow: 1;
 }
 
-.info > div > p > img,
-.info > p > img {
-	width: 3em;
+.group {
+	border: 1px solid var(--lightest);
+	width: 10em;
 }
 
-.overlay {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	opacity: 0;
-	transition: 0.5s ease;
-	background-color: #390161b9;
-	cursor: pointer;
-}
-
-.team:hover .overlay {
-	opacity: 1;
-}
-
-.overlayText {
-	color: white;
+.group > div {
+	font-family: "Montserrat", sans-serif;
 	font-size: 0.8em;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	padding: 10px;
+}
+
+.group > div:first-child {
+	border-bottom: 1px solid var(--lightest);
+}
+
+.lose {
+	background-color: #cc0000;
+}
+.win {
+	background-color: var(--primary);
+}
+
+.hide {
+	display: none;
 }
